Fixed spacing issues and small spacing on other buttons

--- a/src/styles/Popup.module.css
+++ b/src/styles/Popup.module.css
@@ -22,14 +22,14 @@
 .closeBtn {
   position: absolute;
   right: 10px;
-  top: 80px;
-  bottom: 16px;
+  top: 60%;
+  /* bottom: 16px; */
   left: 575px;
 }
 .restartBtn {
   position: absolute;
   right: 10px;
-  top: 16px;
-  bottom: 80px;
+  top: 30%;
+  /* bottom: 16px; */
   left: 575px;
 }
